Manual-Wordpress/05-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: wordpress
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql:8
          imagePullPolicy: IfNotPresent      
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: '2Gi'
              cpu: '1'
          volumeMounts:
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-data
              mountPath: /var/lib/mysql
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              drop:
                - ALL
            runAsNonRoot: false
            seccompProfile: 
              type: RuntimeDefault                
      volumes:
        - name: mysql-init
          configMap:
            name: mysql-wp-config
        - name: mysql-data    
          persistentVolumeClaim:
            claimName: mysql-pvc
