Manual-Wordpress/08-wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
  labels:
   svc: wordpress-service
spec:
  selector:
    app: wordpress
  ports:
  - name: http
    port: 80
    protocol: TCP
